--- a/client/package.json
+++ b/client/package.json
@@ -8,17 +8,34 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "axios": "^0.21.0",
+    "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "mime-types": "^2.1.27",
+    "socket.io-client": "^3.0.1",
     "vue": "^2.6.11",
-    "vue-advanced-chat": "^0.5.0"
+    "vue-advanced-chat": "^0.5.0",
+    "vue-loading-overlay": "^3.4.2",
+    "vue-notification": "^1.3.20",
+    "vue-socket.io": "^3.0.10",
+    "vuejs-dialog": "^1.4.2"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.11.5",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^4.5.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "mutationobserver-shim": "^0.3.7",
+    "popper.js": "^1.16.1",
+    "portal-vue": "^2.1.7",
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2",
+    "vue-cli-plugin-bootstrap-vue": "~0.7.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
