--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,12 @@
   "author": "Mahan Zendedel D.H.",
   "license": "MIT",
   "dependencies": {
-    "mongoose": "^5.10.11"
+    "express": "^4.17.1",
+    "mongoose": "^5.10.11",
+    "socket.io": "^3.0.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "socket.io-client": "^3.0.1"
   }
 }
