--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.6.11",
     "vue-advanced-chat": "^0.5.0",
     "vue-loading-overlay": "^3.4.2",
+    "vue-material": "^1.0.0-beta-15",
     "vue-notification": "^1.3.20",
     "vue-socket.io": "^3.0.10",
     "vuejs-dialog": "^1.4.2"
